--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Webpack</title>
-  <script src="analytics.js"></script>
+  <script src="analytics.bundle.js"></script>
 </head>
 
 <body>
@@ -14,8 +14,7 @@
     <h1>Webpack</h1>
   </div>
 
-  <script src="Post.js"></script>
-  <script src="index.js"></script>
+  <script src="main.bundle.js"></script>
 </body>
 
 </html>
